Add custom Steps in every services file

--- a/src/components/Icons/AFTCIcon.astro
+++ b/src/components/Icons/AFTCIcon.astro
@@ -6,69 +6,10 @@
     viewBox="0 0 95 96.42"
     class="w-9"
     ><defs
-        ><style>
-            .cls-1,
-            .cls-2,
-            .cls-3,
-            .cls-4,
-            .cls-5,
-            .cls-6 {
-                fill: none;
-            }
-            .cls-7 {
-                clip-path: url(#clippath);
-            }
-            .cls-8 {
-                fill: #003530;
-            }
-            .cls-9 {
-                fill: #fff;
-            }
-            .cls-10 {
-                fill: #547975;
-            }
-            .cls-11 {
-                clip-path: url(#clippath-1);
-            }
-            .cls-12 {
-                clip-path: url(#clippath-3);
-            }
-            .cls-13 {
-                clip-path: url(#clippath-2);
-            }
-            .cls-2 {
-                stroke: #89a19f;
-            }
-            .cls-2,
-            .cls-3 {
-                stroke-miterlimit: 10;
-                stroke-width: 0.07px;
-            }
-            .cls-3 {
-                stroke: #205551;
-            }
-            .cls-4 {
-                stroke: #fff;
-            }
-            .cls-4,
-            .cls-5,
-            .cls-6 {
-                stroke-width: 1.15px;
-            }
-            .cls-5 {
-                stroke: #003530;
-            }
-            .cls-6 {
-                stroke: #547975;
-            }
-            .cls-14 {
-                opacity: 0.8;
-            }
-        </style><clipPath id="clippath"><rect class="cls-1" y="1.52" width="92" height="93.37"></rect></clipPath
-        ><clipPath id="clippath-1"><rect class="cls-1" width="95" height="96.42"></rect></clipPath><clipPath
-            id="clippath-2"><rect class="cls-1" y="0" width="95" height="96.42"></rect></clipPath
-        ><clipPath id="clippath-3"
-            ><rect class="cls-1" x="-23.28" y="-23.2" width="169.43" height="127.1"></rect></clipPath
+        ><clipPath id="clippath"><rect class="cls-1" y="1.52" width="92" height="93.37"></rect></clipPath><clipPath
+            id="clippath-1"><rect class="cls-1" width="95" height="96.42"></rect></clipPath
+        ><clipPath id="clippath-2"><rect class="cls-1" y="0" width="95" height="96.42"></rect></clipPath><clipPath
+            id="clippath-3"><rect class="cls-1" x="-23.28" y="-23.2" width="169.43" height="127.1"></rect></clipPath
         ></defs
     ><g class="cls-7"
         ><g class="cls-11"
@@ -134,3 +75,63 @@
         ></g
     ></svg
 >
+
+<style>
+    .cls-1,
+    .cls-2,
+    .cls-3,
+    .cls-4,
+    .cls-5,
+    .cls-6 {
+        fill: none;
+    }
+    .cls-7 {
+        clip-path: url(#clippath);
+    }
+    .cls-8 {
+        fill: #003530;
+    }
+    .cls-9 {
+        fill: #fff;
+    }
+    .cls-10 {
+        fill: #547975;
+    }
+    .cls-11 {
+        clip-path: url(#clippath-1);
+    }
+    .cls-12 {
+        clip-path: url(#clippath-3);
+    }
+    .cls-13 {
+        clip-path: url(#clippath-2);
+    }
+    .cls-2 {
+        stroke: #89a19f;
+    }
+    .cls-2,
+    .cls-3 {
+        stroke-miterlimit: 10;
+        stroke-width: 0.07px;
+    }
+    .cls-3 {
+        stroke: #205551;
+    }
+    .cls-4 {
+        stroke: #fff;
+    }
+    .cls-4,
+    .cls-5,
+    .cls-6 {
+        stroke-width: 1.15px;
+    }
+    .cls-5 {
+        stroke: #003530;
+    }
+    .cls-6 {
+        stroke: #547975;
+    }
+    .cls-14 {
+        opacity: 0.8;
+    }
+</style>
