--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
 import PhotoClientsNumber from '../assets/JOLILOT-21.webp';
 import PhotoPresentation from '../assets/JOLILOT-58.webp';
 import AgencyLocation from '../components/AgencyLocation.astro';
-import AgencySteps from '../components/AgencySteps.astro';
+import AgencySteps, { AgencyStepsProps } from '../components/AgencySteps.astro';
 
 const presentation: Props = {
     photo: PhotoPresentation,
@@ -29,6 +29,63 @@ const presentation: Props = {
         },
     ],
 };
+
+const Steps: AgencyStepsProps = {
+    services: [
+        {
+            title: 'ÉCHANGE / DEVIS',
+            buttonLink: '/services/supports-imprimes',
+            description: [
+                `Suite à un premier échange par téléphone, 
+      à l’agence ou sur le lieu de votre activité, 
+      pour en connaître un peu plus sur vos besoins,
+       vos intentions et/ou vos idées, 
+       Jolilot s’engace à vous retourner
+        sous 48H une proposition entièrement adaptée et personnalisée.`,
+            ],
+            number: '01',
+            subtitle: 'nous nous rencontrons...',
+            textColor: '#fff',
+            color: '#fff',
+        },
+        {
+            title: 'AXE DE CRÉATION',
+            buttonLink: '/services/supports-imprimes',
+            description: [
+                'Nous débuterons par approfondir les objectifs de votre projet afin d’obtenir d’un axe pertinent et concret',
+                'En découlera, notre échange sur l’axe de création : sur lequel l’agence devra s’appuyer pour la suite des étapes créatives.',
+            ],
+            number: '02',
+            subtitle: 'nous analysons vos besoins...',
+            textColor: '#fff',
+            color: '#fff',
+        },
+        {
+            title: 'CRÉATION / PRÉSENTATION',
+            buttonLink: '/services/supports-imprimes',
+            description: [
+                'La ou les propositions retenues sur toutes les recherches effectuées par l’Agence vous sera/ont présentés(s)',
+                'En fonction de votre retour, la proposition que vous aurez choisie pourra être affinée.',
+            ],
+            number: '03',
+            subtitle: 'nous affinons les créations...',
+            textColor: '#fff',
+            color: '#fff',
+        },
+        {
+            title: 'LANCEMENT / SUIVI',
+            buttonLink: '/services/supports-imprimes',
+            description: [
+                'Une fois le projet de création validé et clôturé, nous procéderons à son lancement.',
+                'En fonction de votre projet, Jolilot vous propose une formation personnalisée vous permettant d’être en confiance avec vos nouveaux outils de communication',
+            ],
+            number: '04',
+            subtitle: 'et hop ! nous lançons...',
+            color: '#cc9f5c',
+            textColor: '#cc9f5c',
+        },
+    ],
+};
 ---
 
 <Layout>
@@ -36,7 +93,7 @@ const presentation: Props = {
         <TypingTitle />
         <AgencyPresentation {...presentation} />
         <AgencyLocation />
-        <AgencySteps />
+        <AgencySteps {...Steps} />
         <AgencyClientsNumber photo={PhotoClientsNumber} />
     </main>
 </Layout>
