--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -2,73 +2,22 @@
 import OneService, { Service } from './subcomponents/OneService.astro';
 import SubTitle from './subcomponents/SubTitle.astro';
 
-export type Props = {
+export type Props = AgencyStepsProps;
+
+export type AgencyStepsProps = {
   bgColor?: string;
-  textColor?: string;
-  lastItemColor?: string;
+  services: Service[];
+  titleColor?: string;
 };
-const { bgColor, textColor, lastItemColor } = Astro.props;
-const services: Service[] = [
-  {
-    title: 'ÉCHANGE / DEVIS',
-    buttonLink: '/services/supports-imprimes',
-    description: [
-      `Suite à un premier échange par téléphone, 
-      à l’agence ou sur le lieu de votre activité, 
-      pour en connaître un peu plus sur vos besoins,
-       vos intentions et/ou vos idées, 
-       Jolilot s’engace à vous retourner
-        sous 48H une proposition entièrement adaptée et personnalisée.`,
-    ],
-    number: '01',
-    subtitle: 'nous nous rencontrons...',
-    textColor: textColor || '#fff',
-    color: textColor || '#fff',
-  },
-  {
-    title: 'AXE DE CRÉATION',
-    buttonLink: '/services/supports-imprimes',
-    description: [
-      'Nous débuterons par approfondir les objectifs de votre projet afin d’obtenir d’un axe pertinent et concret',
-      'En découlera, notre échange sur l’axe de création : sur lequel l’agence devra s’appuyer pour la suite des étapes créatives.',
-    ],
-    number: '02',
-    subtitle: 'nous analysons vos besoins...',
-    textColor: textColor || '#fff',
-    color: textColor || '#fff',
-  },
-  {
-    title: 'CRÉATION / PRÉSENTATION',
-    buttonLink: '/services/supports-imprimes',
-    description: [
-      'La ou les propositions retenues sur toutes les recherches effectuées par l’Agence vous sera/ont présentés(s)',
-      'En fonction de votre retour, la proposition que vous aurez choisie pourra être affinée.',
-    ],
-    number: '03',
-    subtitle: 'nous affinons les créations...',
-    textColor: textColor || '#fff',
-    color: textColor || '#fff',
-  },
-  {
-    title: 'LANCEMENT / SUIVI',
-    buttonLink: '/services/supports-imprimes',
-    description: [
-      'Une fois le projet de création validé et clôturé, nous procéderons à son lancement.',
-      'En fonction de votre projet, Jolilot vous propose une formation personnalisée vous permettant d’être en confiance avec vos nouveaux outils de communication',
-    ],
-    number: '04',
-    subtitle: 'et hop ! nous lançons...',
-    color: lastItemColor || '#cc9f5c',
-    textColor: lastItemColor || '#cc9f5c',
-  },
-];
+
+const { bgColor, services, titleColor } = Astro.props;
 ---
 
 <div
   class="bg-marron_fonce text-white py-20 flex flex-col gap-y-14"
   style={{
     backgroundColor: bgColor,
-    color: textColor,
+    color: titleColor,
   }}
 >
   <SubTitle title="jolilot c’est aussi simple que ça !" />
