--- a/src/components/Icons/FranceIcon.astro
+++ b/src/components/Icons/FranceIcon.astro
@@ -11,27 +11,7 @@ const { classes } = Astro.props;
     xmlns:xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 90.3 96"
     class="sm:h-[250px] sm:min-h-[250px] h-[150px]"
-    ><defs
-        ><style>
-            .cls-1,
-            .cls-2 {
-                fill: none;
-            }
-            .cls-3 {
-                clip-path: url(#clippath);
-            }
-            .cls-4 {
-                fill: #c99851;
-            }
-            .cls-5 {
-                fill: #2b2417;
-            }
-            .cls-2 {
-                stroke: #2b2417;
-                stroke-width: 0.2px;
-            }
-        </style>
-    </defs><g class="cls-3"
+    ><defs> </defs><g class="cls-3"
         ><path
             class="cls-2"
             d="m62.72,11.48v-.63l-1.22-2.35-1.84,1.41v-.63l-1.72-.47v-1.57l-.72-1.57-1.79,1.25h-1.73l-2.51.78.41,1.1-.43,2.19.03,3.14.22,1.1h-.94l-.54,1.1-2.34,1.5-1.16.32-2.59.71-.71.88h-1.51l-.67,2.05.67.66-1.48,1.48h-1.44l-1.74-.59h-4.56v-2.92l-1.13-1.38-1.27.71-2.03-.71.08.71v2.05l1.16,1.54.79,1.31v5.08h-2.03l-.69-.34-1.39.34h-1.61l-.34-.34-1.06.34-1.58,1.45v-1.84l-1.27-1.07-.95-.78h-3.8v1.34l-1.11-.56s-.47.56-1.11.56,0-.56,0-.56h-.97l-1.09,1.07h-1.74l-.76.06.76,3.8.95.16v1.64h-3.09l2.3.94v1.28h2.83l1.44.96h1.27l1.58.96,1.02.96,2.14,1.05h1.59l1.1.53v.9l-.16,1.09h1.69l1.15-1.09,2.18,1.93h-3l-.14,1.15,1.27.98-1.13,1.16,1.45,1.75,1.55,2.4.77.67,1.48.99.95.68,1.92.17-1.61,1.34,1.61,1.8-.97,1.53-1.11,1,3.32,2.43.95,1.72-.79,1.72.79,1.65-1.27-1.52v-1.86h-.92s-1.13-1.73-1.13-1.73l-.47,1.72-.32,2.32-.32,2.38-.63,1.61.95-.47.95.94-1.58.76-.63,3.63-1.16,3.45-.08,2.35-2.4,2.82,1.71,1.25h.77v2.04l1.16-.31,1.58,1.1,2.22.47,1.58,1.6h2.06l2.06,1.06,2.25.31,2.18.16.71-1.53h2.59s.59,1.06,1.16,1.06h1.33l1.16.63,1.33.31.18,1.41h2.03l.82,1.48h4.13l1.08-1.32h3.07l-1.22-2.19.16-3.92"
@@ -44,3 +24,23 @@ const { classes } = Astro.props;
         ></path></g
     ></svg
 >
+
+<style>
+    .cls-1,
+    .cls-2 {
+        fill: none;
+    }
+    .cls-3 {
+        clip-path: url(#clippath);
+    }
+    .cls-4 {
+        fill: #c99851;
+    }
+    .cls-5 {
+        fill: #2b2417;
+    }
+    .cls-2 {
+        stroke: #2b2417;
+        stroke-width: 0.2px;
+    }
+</style>
