--- a/src/components/Icons/InstragramIcon.astro
+++ b/src/components/Icons/InstragramIcon.astro
@@ -3,21 +3,8 @@
     xmlns="http://www.w3.org/2000/svg"
     xmlns:xlink="http://www.w3.org/1999/xlink"
     viewBox="0 0 88.29 88.69"
-    class="px- h-20 w-20 px-5"
+    class="h-20 w-20 px-5"
 >
-    <style>
-        .cls-1 {
-            fill: none;
-        }
-
-        .cls-2 {
-            clip-path: url(#clippath);
-        }
-
-        .cls-3 {
-            fill: white;
-        }
-    </style>
     <g class="cls-2">
         <path
             class="cls-3"
@@ -45,3 +32,17 @@
         ></path>
     </g>
 </svg>
+
+<style>
+    .cls-1 {
+        fill: none;
+    }
+
+    .cls-2 {
+        clip-path: url(#clippath);
+    }
+
+    .cls-3 {
+        fill: white;
+    }
+</style>
