--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -11,7 +11,7 @@ import SubFooter from './SubFooter.astro';
       <a href="/" aria-label="Retour a la page d'accueil">
         <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
       >
-      <div class="absolute bottom-0 translate-y-3/4 rounded-full bg-orange">
+      <div class="absolute bottom-0 translate-y-3/4 rounded-full bg-orange text-white">
         <a
           href="https://www.instagram.com/jolilot.atelier/"
           aria-label="Ma page instagram @jolilot.atelier"
