Add carrousel and change typo size and decrease One service size

--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -14,7 +14,7 @@ import Button from './subcomponents/Button.astro';
                 <p class="font-larken text-3xl">où se trouve l’agence ?</p>
                 <p>JOLILOT ATELIER | AGENCE DE COMMUNICATION</p>
             </div>
-            <div class="text-sm flex flex-col gap-6">
+            <div class="flex flex-col gap-6">
                 <p>L’agence Jolilot se situe dans un petit village <br /> au coeur des Causses du Quercy.</p>
                 <div class="flex flex-col gap-2">
                     <p>Village : Alvignac-Les-Eaux</p>
@@ -56,7 +56,7 @@ import Button from './subcomponents/Button.astro';
                 <p class="font-larken text-3xl">travaillons ensemble, même à distance !</p>
                 <p>JOLILOT ATELIER | AGENCE DE COMMUNICATION</p>
             </div>
-            <div class="text-sm flex flex-col gap-6">
+            <div class="flex flex-col gap-6">
                 <p>
                     Certains projets de communication peuvent <br />
                     être envisagés à distance chez Jolilot.
