--- a/src/components/subcomponents/LastProject.astro
+++ b/src/components/subcomponents/LastProject.astro
@@ -22,9 +22,9 @@ const { image, title, description } = Astro.props;
       alt="Photo de fond(un pot de fleur avec de la decoration)"
       class="h-full max-h-52 w-full object-cover"
     />
-    <p class="font-larken text-xl">{title}</p>
+    <p class="font-larken text-lg">{title}</p>
     <div class="max-h-32 overflow-y-auto">
-      <p class="pr-4 font-poppins text-sm">{description}</p>
+      <p class="pr-4 font-poppins">{description}</p>
     </div>
   </div>
 </div>
