--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -8,13 +8,13 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
     class="flex w-full max-w-5xl items-center justify-between border-b border-black/90 text-black/90 max-md:px-8"
   >
     <a href="/" aria-label="Retour a la page d'accueil"><LogoIcon classes="md:w-[150px] w-[100px] py-10" /></a>
-    <div class="flex gap-10 max-md:hidden">
+    <div class="flex gap-10 max-md:hidden text-sm">
       <a href="/a-propos" class="hover:text-orange">À PROPOS</a>
       <div class="relative">
         <button id="open-close-services" class="hover:text-orange cursor-pointer">SERVICES</button>
         <div id="services-dropdown" class="hidden">
           <div
-            class="absolute bg-orange whitespace-nowrap flex flex-col py-5 px-5 gap-1 text-background -translate-x-5 top-full translate-y-[57px]"
+            class="absolute bg-orange whitespace-nowrap flex flex-col py-5 px-5 gap-1 text-background -translate-x-5 top-full translate-y-[58px]"
           >
             <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
             <a href="/services/site-web" class="hover:text-marron_fonce">SITE WEB VITRINE</a>
