--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -118,6 +118,18 @@ const Steps: AgencyStepsProps = {
             color: '#fff',
             textColor: '#fff',
         },
+        {
+            title: 'ENFIN !',
+            buttonLink: '/services/supports-imprimes',
+            description: [
+                'Une fois le projet de création validé et clôturé, nous procéderons à son lancement.',
+                'En fonction de votre projet, Jolilot vous propose une formation personnalisée vous permettant d’être en confiance avec vos nouveaux outils de communication',
+            ],
+            number: '04',
+            subtitle: 'et hop ! nous lançons...',
+            color: 'yellow',
+            textColor: 'yellow',
+        },
     ],
 };
 ---
