--- a/src/components/AgencyContactForm.astro
+++ b/src/components/AgencyContactForm.astro
@@ -75,7 +75,7 @@ import Input from './subcomponents/Input.astro';
 
             <div class="self-end">
                 <button
-                    class="mt-2 w-fit border border-black/20 px-8 py-2 font-poppins md:text-sm text-xs text-black/60 transition ease-in-out bg-marron_fonce hover:border-orange hover:bg-orange text-white"
+                    class="mt-2 w-fit border border-black/20 px-8 py-2 font-poppins text-xs text-black/60 transition ease-in-out bg-marron_fonce hover:border-orange hover:bg-orange text-white"
                 >
                     ENVOYER
                 </button>
