--- a/src/components/subcomponents/OneService.astro
+++ b/src/components/subcomponents/OneService.astro
@@ -18,7 +18,7 @@ const { number, title, subtitle, description, buttonText, buttonLink, color, tex
 console.log;
 ---
 
-<div class="flex gap-6 text-black/90">
+<li class="flex gap-6 text-black/90 glide__slide pr-5 max-w-xs">
   <div
     class="progress-vertical-one-service relative mt-4 bg-black/90 border-black/90 border-l rounded-none"
     style={`background-color: ${color};border-color: ${color};`}
@@ -30,17 +30,17 @@ console.log;
     </div>
   </div>
   <div class="flex flex-col gap-3 font-larken">
-    <p class="text-6xl" style={`color: ${color};`}>{number}</p>
-    <p class="text-base" style={`color: ${color};`}>{title}</p>
+    <p class="text-5xl" style={`color: ${color};`}>{number}</p>
+    <p class="text-sm" style={`color: ${color};`}>{title}</p>
     <p class="font-poppins text-xs font-normal italic text-subtitlecard" style={`color: ${textColor};`}>{subtitle}</p>
     <div class="flex flex-col gap-3" style={`color: ${textColor};`}>
-      {description.map((item) => <p class="font-poppins text-sm">{item}</p>)}
+      {description.map((item) => <p class="font-poppins">{item}</p>)}
     </div>
     {
       isButton &&
         (color === '#cc9f5c' ? (
           <a
-            class="mt-2 w-fit bg-orange px-8 py-2 font-poppins md:text-sm text-xs transition ease-in-out hover:bg-marron_fonce text-white"
+            class="mt-2 w-fit bg-orange px-8 py-2 font-poppins text-xs transition ease-in-out hover:bg-marron_fonce text-white"
             href={buttonLink}
           >
             {buttonText ? buttonText : "c'est ce qu'il me faut"}
@@ -50,7 +50,7 @@ console.log;
         ))
     }
   </div>
-</div>
+</li>
 
 <style>
   .progress-vertical-one-service {
