--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -22,25 +22,22 @@ const { bgColor, services, titleColor } = Astro.props;
   }}
 >
   <SubTitle title="jolilot c’est aussi simple que ça !" />
-  <div class="relative flex w-full flex-col items-center">
-    <div class="glide w-full max-w-[1800px] px-4 md:px-10 flex items-center justify-center gap-3">
-      <div data-glide-el="controls" class={services.length > 4 ? '' : 'xl:hidden'}>
-        <button data-glide-dir="<" class="rotate-180">
-          <FlecheIcon />
-        </button>
-      </div>
-
+  <div class="relative flex w-full flex-col items-center glide">
+    <div class="w-full max-w-[1800px] px-4 md:px-20">
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides px-3">
           {services.map((service) => <OneService {...service} />)}
         </ul>
       </div>
+    </div>
 
-      <div data-glide-el="controls" class={services.length > 4 ? '' : 'xl:hidden'}>
-        <button data-glide-dir=">">
-          <FlecheIcon />
-        </button>
-      </div>
+    <div data-glide-el="controls" class={services.length > 4 ? 'flex gap-4' : 'xl:hidden flex gap-4'}>
+      <button data-glide-dir="<" class="rotate-180">
+        <FlecheIcon />
+      </button>
+      <button data-glide-dir=">">
+        <FlecheIcon />
+      </button>
     </div>
   </div>
 </div>
@@ -51,7 +48,7 @@ const { bgColor, services, titleColor } = Astro.props;
   }
 </style>
 
-<script type="module" define:vars={{ services }}>
+<script type="module">
 import Glide from 'https://unpkg.com/@glidejs/glide@3.6.0/dist/glide.esm.js';
 
 new Glide('.glide', {
