--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -6,7 +6,7 @@ import SubFooter from './SubFooter.astro';
 ---
 
 <div>
-  <div class="grid w-full items-center gap-y-10 bg-orange py-10 text-white/80 md:grid-cols-2">
+  <div class="grid w-full items-center bg-orange py-10 text-white/80 md:grid-cols-2">
     <div class="relative flex h-full items-center justify-center max-md:row-start-2">
       <a href="/" aria-label="Retour a la page d'accueil">
         <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
