Fix change and carrousel

--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -15,14 +15,14 @@ const { bgColor, services, titleColor } = Astro.props;
 ---
 
 <div
-  class="bg-marron_fonce text-white py-20 flex flex-col gap-y-14"
+  class="bg-marron_fonce text-white pb-8 pt-16 flex flex-col gap-y-14"
   style={{
     backgroundColor: bgColor,
     color: titleColor,
   }}
 >
   <SubTitle title="jolilot c’est aussi simple que ça !" />
-  <div class="relative flex w-full flex-col items-center glide">
+  <div class="relative flex w-full flex-col items-center glide gap-y-8">
     <div class="w-full max-w-[1800px] px-4 md:px-20">
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides px-3">
