--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -127,8 +127,8 @@ const Steps: AgencyStepsProps = {
             ],
             number: '05',
             subtitle: 'et hop ! nous lançons...',
-            color: 'yellow',
-            textColor: 'yellow',
+            color: '#fff',
+            textColor: '#fff',
         },
     ],
 };
