--- a/src/components/subcomponents/OneService.astro
+++ b/src/components/subcomponents/OneService.astro
@@ -33,7 +33,7 @@ console.log;
   </div>
   <div class="flex flex-col gap-3 font-larken">
     <p class="text-5xl" style={`color: ${color};`}>{number}</p>
-    <p class="text-sm" style={`color: ${color};`}>{title}</p>
+    <p class="text-base" style={`color: ${color};`}>{title}</p>
     <p class="font-poppins text-xs font-normal italic text-subtitlecard" style={`color: ${textColor};`}>{subtitle}</p>
     <div class="flex flex-col gap-3" style={`color: ${textColor};`}>
       {description.map((item) => <p class="font-poppins">{item}</p>)}
