--- a/src/components/AgencySteps.astro
+++ b/src/components/AgencySteps.astro
@@ -31,7 +31,7 @@ const { bgColor, services, titleColor } = Astro.props;
       </div>
     </div>
 
-    <div data-glide-el="controls" class={services.length > 4 ? 'flex gap-4' : 'xl:hidden flex gap-4'}>
+    <div data-glide-el="controls" class="flex gap-4">
       <button data-glide-dir="<" class="rotate-180">
         <FlecheIcon />
       </button>
