--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -24,8 +24,15 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
           </div>
         </div>
       </div>
-      <a href="/realisations" class="hover:text-orange">RÉALISATIONS</a>
+
       <a href="/contact" class="hover:text-orange">CONTACT</a>
+      <a
+        href="https://www.instagram.com/jolilot.atelier/"
+        aria-label="Ma page instagram @jolilot.atelier"
+        target="_blank"
+        referrerpolicy="no-referrer"
+        class="hover:text-orange pl-9">RÉALISATIONS</a
+      >
     </div>
     <button
       id="open-close-mobile"
@@ -60,8 +67,15 @@ import LogoIcon from '../components/Icons/LogoIcon.astro';
             <a href="/services/conseil-suivi" class="hover:text-marron_fonce">CONSEIL & SUIVI</a>
           </div>
         </div>
-        <a href="/realisations" class="hover:text-orange">RÉALISATIONS</a>
+
         <a href="/contact" class="hover:text-orange">CONTACT</a>
+        <a
+          href="https://www.instagram.com/jolilot.atelier/"
+          aria-label="Ma page instagram @jolilot.atelier"
+          target="_blank"
+          referrerpolicy="no-referrer"
+          class="hover:text-orange pt-8">RÉALISATIONS</a
+        >
       </div>
     </div>
   </div>
