--- a/src/pages/services/conseil-suivi.astro
+++ b/src/pages/services/conseil-suivi.astro
@@ -7,6 +7,7 @@ import Photo from '../../assets/1743-Joey-Joe-Ann-Knoester-1.webp';
 import AgencySteps, { AgencyStepsProps } from '../../components/AgencySteps.astro';
 import AgencyOneService, { OneService } from '../../components/AgencyOneService.astro';
 import AgencyContactForm from '../../components/AgencyContactForm.astro';
+import PhotosCarrousel from '../../components/PhotosCarrousel.astro';
 
 const color = '#dcbf7e';
 const presentation: PresentationProps = {
@@ -114,6 +115,7 @@ const Steps: AgencyStepsProps = {
         <AgencyPresentation {...presentation} />
         <AgencyOneService oneService={oneService} />
         <AgencySteps {...Steps} />
+        <PhotosCarrousel />
         <AgencyContactForm />
     </main>
 </Layout>
