--- a/src/pages/services/supports-imprimes.astro
+++ b/src/pages/services/supports-imprimes.astro
@@ -7,6 +7,7 @@ import Photo from '../../assets/Photo.webp';
 import AgencySteps, { AgencyStepsProps } from '../../components/AgencySteps.astro';
 import AgencyOneService, { OneService } from '../../components/AgencyOneService.astro';
 import AgencyContactForm from '../../components/AgencyContactForm.astro';
+import PhotosCarrousel from '../../components/PhotosCarrousel.astro';
 
 const color = '#9cb6be';
 const presentation: PresentationProps = {
@@ -140,6 +141,7 @@ const Steps: AgencyStepsProps = {
         <AgencyPresentation {...presentation} />
         <AgencyOneService oneService={oneService} />
         <AgencySteps {...Steps} />
+        <PhotosCarrousel />
         <AgencyContactForm />
     </main>
 </Layout>
