--- a/src/components/AgencyLocation.astro
+++ b/src/components/AgencyLocation.astro
@@ -22,7 +22,7 @@ import Button from './subcomponents/Button.astro';
                     <p>Région : Occitanie</p>
                 </div>
             </div>
-            <div class="flex w-full">
+            <div class="flex w-full pt-20">
                 <div class="sm:-mr-10 max-sm:w-[110px]">
                     <FranceIcon />
                 </div>
