--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -6,7 +6,7 @@ import SubFooter from './SubFooter.astro';
 ---
 
 <div>
-  <div class="grid w-full items-center bg-orange pb-10 sm:pt-10 pt-20 text-white/80 md:grid-cols-2">
+  <div class="grid w-full items-center bg-orange pb-10 md:pt-10 pt-20 text-white/80 md:grid-cols-2">
     <div class="relative flex h-full items-center justify-center max-md:row-start-2">
       <a href="/" aria-label="Retour a la page d'accueil">
         <LogoIcon classes="max-w-[190px] w-[190px] min-w-[190px] py-20" /></a
@@ -23,7 +23,7 @@ import SubFooter from './SubFooter.astro';
       </div>
     </div>
 
-    <div class="flex justify-center gap-8 xl:max-w-2xl flex-wrap items-center max-sm:text-center">
+    <div class="flex justify-center gap-8 xl:max-w-2xl flex-wrap max-md:items-center max-md:text-center">
       <div class="flex select-none flex-col gap-3 w-[200px]">
         <p class="font-larken">LES SERVICES</p>
         <a href="/services/supports-imprimes" class="hover:text-marron_fonce">SUPPORT IMPRIMÉS</a>
@@ -35,7 +35,13 @@ import SubFooter from './SubFooter.astro';
       <div class="flex flex-col gap-3 select-none w-[200px]">
         <p class="font-larken">EN SAVOIR PLUS</p>
         <a href="/a-propos" class="hover:text-marron_fonce">À PROPOS</a>
-        <a href="/realisation" class="hover:text-marron_fonce">RÉALISATIONS</a>
+        <a
+          href="https://www.instagram.com/jolilot.atelier/"
+          aria-label="Ma page instagram @jolilot.atelier"
+          target="_blank"
+          referrerpolicy="no-referrer"
+          class="hover:text-marron_fonce">RÉALISATIONS</a
+        >
         <a href="/contact" class="hover:text-marron_fonce">CONTACT</a>
       </div>
       <div class="flex flex-col gap-3 w-[200px]">
